--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.cdnfonts.com/css/sf-pro-display');
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
 * {
     margin: 0;
@@ -8,13 +8,13 @@
 
 
 body {
-    font-family: 'SF Pro Display', Arial, sans-serif;
+    font-family: 'Permanent Marker', sans-serif;
     display: flex;
     justify-content: center;
     align-items: flex-start;
     height: 100vh;
     padding: 40px 0;
-    background: linear-gradient(135deg, #f5e6cc, #8b5bb7);
+    background: linear-gradient(135deg, #181918, #8b5bb7);
 }
 
 .fade-in {
